Fixes #194 after a massive refactor of RollupEvaluator. Still a few functional TODOs to implement nested NOT statements (but I'm confident those weren't working previously, either). This is a breaking change for subscribers that were previously using the SQL syntax for NOT conditions in their where clauses. Massive thanks to @jongpie for keeping me company during this refactor!

--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -775,7 +775,7 @@ private class RollupFullRecalcTests {
         LookupFieldOnLookupObject__c = 'Id',
         RollupFieldOnLookupObject__c = 'AccountNumber',
         RollupOperation__c = 'CONCAT',
-        CalcItemWhereClause__c = 'Subject NOT LIKE \'Email\' ||| WhatId = \'' + acc.Id + '\''
+        CalcItemWhereClause__c = '(NOT Subject LIKE \'Email\') ||| WhatId = \'' + acc.Id + '\''
       )
     };
 
