Includes another fix for #500 where cached lookup items were sometimes crossing over into other full recalc runs

--- a/extra-tests/classes/RollupIntegrationTests.cls
+++ b/extra-tests/classes/RollupIntegrationTests.cls
@@ -1592,7 +1592,7 @@ private class RollupIntegrationTests {
     Test.startTest();
     Rollup.sumFromApex(ContactPointAddress.PreferenceRank, ContactPointAddress.ParentId, Account.Id, Account.AnnualRevenue, Account.SObjectType)
       .addLimit(1, ContactPointAddress.PreferenceRank)
-      .addOrderBys(new List<RollupOrderBy__mdt>{ new RollupOrderBy__mdt(Ranking__c = 0, FieldName__c = 'Id') }, ContactPointAddress.PreferenceRank)
+      .addOrderBys(new List<RollupOrderBy__mdt>{ new RollupOrderBy__mdt(Ranking__c = 0, FieldName__c = 'Name') }, ContactPointAddress.PreferenceRank)
       .runCalc();
     Test.stopTest();
 
