Fixes the rest of #526 by properly querying non-Id fields for parent when RollupParentResetProcessor runs

--- a/rollup/core/classes/RollupParentResetProcessor.cls
+++ b/rollup/core/classes/RollupParentResetProcessor.cls
@@ -75,8 +75,7 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
             rollupMeta.RollupFieldOnLookupObject__c
           ) == false && parentFields.containsKey(rollupMeta.RollupFieldOnLookupObject__c)
         ) {
-          Object resetVal = getDefaultValue(rollupMeta);
-          parentItem.put(rollupMeta.RollupFieldOnLookupObject__c, resetVal);
+          parentItem.put(rollupMeta.RollupFieldOnLookupObject__c, getDefaultValue(rollupMeta));
         }
       }
     }
